--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "epsi-front-end",
   "version": "0.1.0",
-  "private": true,  
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
