--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "@types/recharts": "^1.8.29",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.7.0",
     "node-fetch": "^3.3.2",
+    "ol": "^10.2.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
+    "react-map-gl": "^7.1.7",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-visibility-sensor": "^5.1.1",
@@ -54,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@types/ol": "^7.0.0",
     "eslint-config-react-app": "^7.0.1"
   }
 }
